--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			 <groupId>org.projectlombok</groupId>
+			 <artifactId>lombok</artifactId>
+			  <version>1.16.18</version>
+                         <version>1.18.0</version>
+                           <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
