--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,7 @@
 		<dependency>
 			 <groupId>org.projectlombok</groupId>
 			 <artifactId>lombok</artifactId>
-			  <version>1.16.18</version>
-                         <version>1.18.0</version>
-                           <scope>provided</scope>
+                         <optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
